tests/samples/invalid/abort_with_arguments.pn
fn main() -> u8
{
	var x = 2 + 2;

	// oops
	x = x + 1;

	if x != 4
	{
		abort!("this is not allowed");
	}
	return: x
}
